syntax = "proto3";

package common.v1;

enum SourceOfWealth {
  SOURCE_OF_WEALTH_UNSPECIFIED = 0;
  SOURCE_OF_WEALTH_SALARY = 1;
  SOURCE_OF_WEALTH_PENSION = 2;
  SOURCE_OF_WEALTH_CAPITAL_INCOME = 3;
  SOURCE_OF_WEALTH_RENTAL_INCOME = 4;
  SOURCE_OF_WEALTH_LOANS = 5;
  SOURCE_OF_WEALTH_INSURANCE_CLAIMS = 6;
  SOURCE_OF_WEALTH_DIVORCE = 7;
  SOURCE_OF_WEALTH_LOTTERY = 8;
  SOURCE_OF_WEALTH_SAVINGS = 9;
  SOURCE_OF_WEALTH_HERITAGE = 10;
  SOURCE_OF_WEALTH_GIFT = 11;
  SOURCE_OF_WEALTH_INVESTMENTS = 12;
  SOURCE_OF_WEALTH_LIFE_INSURANCE = 13;
  SOURCE_OF_WEALTH_COMPANIES = 14;
  SOURCE_OF_WEALTH_JUDGEMENTS = 15;
  SOURCE_OF_WEALTH_CRYPTO = 16;
}

// Defines the origin of the status transition
enum StatusTransitionReason {
  STATUS_TRANSITION_REASON_UNSPECIFIED = 0;
  STATUS_TRANSITION_REASON_SOLARIS = 1;
  STATUS_TRANSITION_REASON_NURI = 2;
  STATUS_TRANSITION_REASON_EXT_PARTNER = 3;
}
